# src/route/ai.route.ts
@@ -1,6 +1,6 @@
 import multer from "multer";
 import { Router } from "express";
-import { visualSkinDiagnosisController } from "../controller/ai.controller";
+import { symptomDiagnosisController, visualSkinDiagnosisController } from "../controller/ai.controller";
 
 const route : Router = Router()
 
@@ -8,5 +8,7 @@ const route : Router = Router()
 const upload = multer()
 
 route.post("/diagnoseSkinPic", upload.single("pic"),visualSkinDiagnosisController)
+
+route.post("/diagnoseSymptom", symptomDiagnosisController)
 
 export default route
