# src/route/message.route.ts
@@ -1,13 +1,14 @@
 import { Router } from "express";
-import { getAllUserMessageController, getMessageController, sendMessageController } from "../controller/message.controller";
+import { getAllUserMessageController, getMessageController, getMessageWithParticipantController, getUserFriendController, sendMessageController } from "../controller/message.controller";
 import { protectedRoute } from "../service/utility.service";
 
 var route : Router = Router()
 
 route.post("/message", protectedRoute, sendMessageController)
 
-route.get("/message", protectedRoute, getMessageController)
+route.get("/getMessageWithParticipant", protectedRoute, getMessageWithParticipantController)
 
 route.get("/all_user/message", protectedRoute, getAllUserMessageController)
 
+route.get("/all_user/friends", protectedRoute, getUserFriendController)
 export default route
